cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(bls-test)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/block")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/codec")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/container")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/hash")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/mac")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/math")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/modes")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/pubkey")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/random")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/stream")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/zk")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/marshalling/algebra")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/marshalling/core")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/libs/marshalling/multiprecision")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/bin/blssig")